--- a/Projekt/projekt/main_app/static/main_app/css/base.css
+++ b/Projekt/projekt/main_app/static/main_app/css/base.css
@@ -1,10 +1,17 @@
 .container--header
 {
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .container--navbar {
     padding-left: 0px;
     padding-right: 0px;
     box-shadow: 3px 9px 38px -16px rgba(0,0,0,0.75);
+}
+
+.shortArticle{
+    margin: 1%;
+    padding: 0px;
+    text-align: center;
 }
