--- a/Projekt/projekt/main_app/templates/main_app/base.html
+++ b/Projekt/projekt/main_app/templates/main_app/base.html
@@ -17,10 +17,16 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 
+  {% load static %}
+  <script type="text/javascript" src="{% static 'main_app/js/jquery-3.3.1.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'main_app/plugin/tinymce/tinymce.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'main_app/plugin/tinymce/init-tinymce.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'main_app/css/base.css' %}" type="text/css">
 
 </head>
 
 <body>
+
   <div class="container">
     {% if not user.is_authenticated %}
     <div class="container--header">
@@ -43,7 +49,7 @@
     {% endif %}
 
     <div class="row">
-      <img src="m4.jpg" class="img-responsive" width="100%" alt="Base image">
+      <img src="media/{{base.headerImage}}" class="img-responsive" width="100%" alt="Base image">
     </div>
 
     <div class="container--navbar sticky-top" style="background-color:{{nav.color}};">
@@ -67,6 +73,9 @@
             <li class="nav-item">
               <a class="nav-link" style="color:{{nav.fontColor}}" href="#">{{nav.text4}}</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" style="color:{{nav.fontColor}}" href="#">{{nav.text5}}</a>
+            </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -80,24 +89,65 @@
     {% block middle %}
     {% endblock %}
 
+
+    {% if not user.is_authenticated %}
+
+    {% else %}
+    asd
+    {% endif %}
+
+
+    {% if not user.is_authenticated %}
+
     <footer class="page-footer font-small teal pt-4" style="background-color:{{footer.backColor}};">
-        <div class="container-fluid text-center text-md-left">
-            <div class="row">
-                <div class="col-md-6 mt-md-0 mt-3">
-                    {{text1}}
-                </div>
-                <hr class="clearfix w-100 d-md-none pb-3">
-                <div class="col-md-6 mb-md-0 mb-3">
-                    {{text2}}
-                </div>
-            </div>
+      <div class="container-fluid text-center text-md-left">
+        <div class="row">
+          <div class="col-md-6 mt-md-0 mt-3">
+            {{footer.text1 | safe}}
+          </div>
+          <hr class="clearfix w-100 d-md-none pb-3">
+          <div class="col-md-6 mb-md-0 mb-3">
+            {{footer.text2 | safe}}
+          </div>
         </div>
-        <div class="footer-copyright text-center py-3" style="color: {{footer.fontColor}};">© 2018 Copyright:
-            <a href="#"> blog.com</a>
-        </div>
+      </div>
+      <div class="footer-copyright text-center py-3" style="color: {{footer.fontColor}};">© 2018 Copyright:
+        <a href="#"> blog.com</a>
+      </div>
     </footer>
 
+    {% else %}
 
+    <footer class="page-footer font-small teal pt-4" style="background-color:{{footer.backColor}};">
+      <div class="container-fluid text-center text-md-left">
+        <div class="row">
+          <div class="col-md-6 mt-md-0 mt-3">
+            <div>
+              <form action="{% url 'main_app:changeFooterText1' %}" method="post">
+                {% csrf_token %}
+                <textarea class="tinymce" name="text">{{footer.text1}}</textarea>
+                <button type="submit" class="btn btn-default" value="Login" class="form login"> Change </button>
+              </form>
+            </div>
+          </div>
+          <hr class="clearfix w-100 d-md-none pb-3">
+          <div class="col-md-6 mb-md-0 mb-3">
+            <div>
+              <form action="{% url 'main_app:changeFooterText2' %}" method="post">
+                {% csrf_token %}
+                <textarea class="tinymce" name="text">{{footer.text2}}</textarea>
+                <button type="submit" class="btn btn-default" value="Login" class="form login"> Change </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright text-center py-3" style="color: {{footer.fontColor}};">© 2018 Copyright:
+        <a href="#"> blog.com</a>
+      </div>
+    </footer>
+
+    {% endif %}
 
 
   </div>
