--- a/Projekt/projekt/main_app/static/main_app/css/base.css
+++ b/Projekt/projekt/main_app/static/main_app/css/base.css
@@ -17,8 +17,8 @@
 
 .shortArticle{
     border: none;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .shortArticle_title{
@@ -54,4 +54,9 @@
     font-size: 32px;
     margin-top: 20px;
     margin-bottom: 15px;
+}
+
+.rowChangeArticle{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
