--- a/Projekt/projekt/main_app/templates/main_app/Home.html
+++ b/Projekt/projekt/main_app/templates/main_app/Home.html
@@ -5,10 +5,10 @@
 
 <div class="row">
     {% for article in articles %}
-    <div class="shortArticle card col-md-4">
+    <div class="card col-md-4 shortArticle">
         <a href="{% url 'main_app:articleView' article.id %}">
             <img class="img-responsive smallImageArticle" src="media/{{article.image}}" alt="imageArticle" width="100%">
-            <div class="card-title shortArticle_title">{{article.title}}</div>
+            <div class="card-title shortArticle_title">{{article.title | safe}}</div>
         </a>
     </div>
     {% endfor %}
