przeniesienie artykulu do osobnej aplikacji

--- a/Projekt/projekt/main_app/templates/main_app/base.html
+++ b/Projekt/projekt/main_app/templates/main_app/base.html
@@ -62,7 +62,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'main_app:articles' %}">{{nav.text1}}</a>
+              <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'article_app:articles' %}">{{nav.text1}}</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'main_app:tests' %}">{{nav.text2}}</a>
