--- a/Projekt/projekt/article_app/templates/article_app/article.html
+++ b/Projekt/projekt/article_app/templates/article_app/article.html
@@ -8,7 +8,7 @@
     {% else %}
     <div class="row rowChangeArticle">
         <div class="col-md-2">
-            <form action="{% url 'main_app:articleChangeBackgroundColor' article.id %}" method="post">
+            <form action="{% url 'article_app:articleChangeBackgroundColor' article.id %}" method="post">
                 {% csrf_token %}
                 <input type="color" name="text">{{article.backgroundColor}}</input>
                 <button type="submit" class="btn btn-default" value="Change" class="form title"> Change BackgroundColor
@@ -23,7 +23,7 @@
     {% else %}
     <div class="row rowChangeArticle">
         <div class="col-md-2">
-            <form action="{% url 'main_app:articleChangeImage' article.id %}" method="post">
+            <form action="{% url 'article_app:articleChangeImage' article.id %}" method="post">
                 {% csrf_token %}
                 <input type="file" name="text">{{article.image}}</input>
                 <button type="submit" class="btn btn-default" value="Change" class="form title"> Change image
@@ -39,7 +39,7 @@
     <div class="row rowChangeArticle">
         <div class="col-md-2">
             Is best?
-            <form action="{% url 'main_app:articleChangeIsBest' article.id %}" method="post">
+            <form action="{% url 'article_app:articleChangeIsBest' article.id %}" method="post">
                 {% csrf_token %}
                 <input type="checkbox" name="text">{{article.isBest}}</input>
                 <button type="submit" class="btn btn-default" value="Change" class="form title"> Change isBest
@@ -55,7 +55,7 @@
     <div class="row rowChangeArticle">
         <div class="col-md-2">
             Is visible?
-            <form action="{% url 'main_app:articleChangeIsVisible' article.id %}" method="post">
+            <form action="{% url 'article_app:articleChangeIsVisible' article.id %}" method="post">
                 {% csrf_token %}
                 <input type="checkbox" name="text">{{article.isVisible}}</input>
                 <button type="submit" class="btn btn-default" value="Change" class="form title"> Change is visible
@@ -71,7 +71,7 @@
     {% else %}
     <div class="row rowChangeArticle">
         <div class="col-md-2">
-            <form action="{% url 'main_app:articleChangeCategory' article.id %}" method="post">
+            <form action="{% url 'article_app:articleChangeCategory' article.id %}" method="post">
                 {% csrf_token %}
                 <textarea name="text">{{article.category}}</textarea>
                 <button type="submit" class="btn btn-default" value="Change" class="form title"> Change category
@@ -91,7 +91,7 @@
     {% else %}
     <div class="row rowChangeArticle">
         <div class="offset-lg-5 col-md-3">
-            <form action="{% url 'main_app:articleChangeTitle' article.id %}" method="post">
+            <form action="{% url 'article_app:articleChangeTitle' article.id %}" method="post">
                 {% csrf_token %}
                 <textarea class="tinymce" name="text">{{article.title}}</textarea>
                 <button type="submit" class="btn btn-default" value="Change" class="form title"> Change title
@@ -111,7 +111,7 @@
     {% else %}
     <div class="row rowChangeArticle">
         <div class="col-md-3">
-            <form action="{% url 'main_app:articleChangeDate' article.id %}" method="post">
+            <form action="{% url 'article_app:articleChangeDate' article.id %}" method="post">
                 {% csrf_token %}
                 <textarea class="tinymce" name="text">{{article.date}}</textarea>
                 <button type="submit" class="btn btn-default" value="Change" class="form title"> Change dates
@@ -132,7 +132,7 @@
     {% else %}
     <div class="row rowChangeArticle">
         <div class=" col-md-3">
-            <form action="{% url 'main_app:articleChangeAuthor' article.id %}" method="post">
+            <form action="{% url 'article_app:articleChangeAuthor' article.id %}" method="post">
                 {% csrf_token %}
                 <textarea class="tinymce" name="text">{{article.author}}</textarea>
                 <button type="submit" class="btn btn-default" value="Change" class="form title"> Change author
@@ -153,7 +153,7 @@
     {% else %}
     <div class="row rowChangeArticle">
         <div class=" col-md-12">
-            <form action="{% url 'main_app:articleChangeText' article.id %}" method="post">
+            <form action="{% url 'article_app:articleChangeText' article.id %}" method="post">
                 {% csrf_token %}
                 <textarea class="tinymce" name="text">{{article.text}}</textarea>
                 <button type="submit" class="btn btn-default" value="Change" class="form title"> Change text
