--- a/Projekt/projekt/article_app/templates/article_app/articles.html
+++ b/Projekt/projekt/article_app/templates/article_app/articles.html
@@ -13,7 +13,7 @@
 {% else %}
 <div class="row">
     <div class="col-md-1">
-        <a href="{% url 'main_app:articleAdd' %}" role="button" class="btn btn-success">Add article</a>
+        <a href="{% url 'article_app:articleAdd' %}" role="button" class="btn btn-success">Add article</a>
     </div>
 </div>
 {% endif %}
@@ -21,8 +21,8 @@
 <div class="row">
     {% for article in articles %}
     <div class="col-md-4 card shortArticle">
-        <a href="{% url 'main_app:articleView' article.id %}">
-            <img class="img-responsive smallImageArticle" src="media/{{article.image}}" alt="imageArticle" width="100%">
+        <a href="{% url 'article_app:articleView' article.id %}">
+            <img class="img-responsive smallImageArticle" src="../media/{{article.image}}" alt="imageArticle" width="100%">
             <div class="card-title shortArticle_title">{{article.title | safe}}</div>
         </a>
     </div>
