--- a/Projekt/projekt/main_app/templates/main_app/base.html
+++ b/Projekt/projekt/main_app/templates/main_app/base.html
@@ -65,7 +65,7 @@
               <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'article_app:articles' %}">{{nav.text1}}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'main_app:tests' %}">{{nav.text2}}</a>
+              <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'tests_app:tests' %}">{{nav.text2}}</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" style="color:{{nav.fontColor}}" href="#">{{nav.text3}}</a>
