--- a/Projekt/projekt/main_app/templates/main_app/base.html
+++ b/Projekt/projekt/main_app/templates/main_app/base.html
@@ -68,10 +68,10 @@
               <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'tests_app:tests' %}">{{nav.text2}}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="color:{{nav.fontColor}}" href="#">{{nav.text3}}</a>
+              <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'contact_app:contact' %}">{{nav.text3}}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="color:{{nav.fontColor}}" href="#">{{nav.text4}}</a>
+              <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'aboutMe_app:aboutMe' %}">{{nav.text4}}</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" style="color:{{nav.fontColor}}" href="#">{{nav.text5}}</a>
