--- a/Projekt/projekt/main_app/templates/main_app/base.html
+++ b/Projekt/projekt/main_app/templates/main_app/base.html
@@ -74,7 +74,7 @@
               <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'aboutMe_app:aboutMe' %}">{{nav.text4}}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="color:{{nav.fontColor}}" href="#">{{nav.text5}}</a>
+              <a class="nav-link" style="color:{{nav.fontColor}}" href="{% url 'gallery_app:gallery' %}">{{nav.text5}}</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
