--- a/Projekt/projekt/main_app/static/main_app/css/base.css
+++ b/Projekt/projekt/main_app/static/main_app/css/base.css
@@ -81,3 +81,10 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+
+.textboxSignIn,
+.buttonSignIn{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
