--- a/Projekt/projekt/contact_app/templates/contact_app/contact.html
+++ b/Projekt/projekt/contact_app/templates/contact_app/contact.html
@@ -15,7 +15,7 @@
         <form action="{% url 'contact_app:changelabelDetails' %}" method="post">
             {% csrf_token %}
             <textarea class="tinymce" name="text">{{contactData.labelDetails}}</textarea>
-            <button type="submit" class="btn btn-default" value="Login" class="form login"> Change label details
+            <button type="submit" class="btn btn-info" value="Login" class="form login"> Change label details
             </button>
         </form>
     </div>
@@ -51,7 +51,7 @@
         <form action="{% url 'contact_app:changelabelPhone' %}" method="post">
             {% csrf_token %}
             <textarea class="tinymce" name="text">{{contactData.labelPhone}}</textarea>
-            <button type="submit" class="btn btn-default" value="Login" class="form login"> Change label phone
+            <button type="submit" class="btn btn-info" value="Login" class="form login"> Change label phone
             </button>
         </form>
     </div>
@@ -61,7 +61,7 @@
         <form action="{% url 'contact_app:changePhone' %}" method="post">
             {% csrf_token %}
             <textarea class="tinymce" name="text">{{contactData.phone}}</textarea>
-            <button type="submit" class="btn btn-default" value="Login" class="form login"> Change phone
+            <button type="submit" class="btn btn-info" value="Login" class="form login"> Change phone
             </button>
         </form>
     </div>
@@ -71,7 +71,7 @@
         <form action="{% url 'contact_app:changelabelEmail' %}" method="post">
             {% csrf_token %}
             <textarea class="tinymce" name="text">{{contactData.labelEmail}}</textarea>
-            <button type="submit" class="btn btn-default" value="Login" class="form login"> Change label email
+            <button type="submit" class="btn btn-info" value="Login" class="form login"> Change label email
             </button>
         </form>
     </div>
@@ -81,7 +81,7 @@
         <form action="{% url 'contact_app:changeEmail' %}" method="post">
             {% csrf_token %}
             <textarea class="tinymce" name="text">{{contactData.email}}</textarea>
-            <button type="submit" class="btn btn-default" value="Login" class="form login"> Change email
+            <button type="submit" class="btn btn-info" value="Login" class="form login"> Change email
             </button>
         </form>
     </div>
