poprawka i modul zapisu logowania

--- a/Projekt/projekt/main_app/templates/main_app/Search.html
+++ b/Projekt/projekt/main_app/templates/main_app/Search.html
@@ -3,7 +3,7 @@
 {% block middle %}
 
 <div class="row">
-    <div class="col">
+    <div class="col articlesMainTitle">
         Search
     </div>
 </div>
