add google analytics

--- a/Projekt/projekt/main_app/templates/main_app/base.html
+++ b/Projekt/projekt/main_app/templates/main_app/base.html
@@ -23,6 +23,15 @@
   <script type="text/javascript" src="{% static 'main_app/plugin/tinymce/init-tinymce.js' %}"></script>
   <link rel="stylesheet" href="{% static 'main_app/css/base.css' %}" type="text/css">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132445976-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-132445976-1');
+</script>
 </head>
 
 <body>
